[tool.poetry]
name = "excel-work"
version = "0.1.0"
description = ""
authors = ["Kenny Chou <kennyc015@gmail.com>"]
readme = "README.md"
packages = [{include = "excel_work"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
xlrd = "^2.0.1"
openpyxl = "^3.1.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
